feat: add critical production features
